# RealSenseWrapper

./: CMakeLists.txt  README.md
src/: RealSenseWrapper.cpp  RealSenseWrapper.hpp
